Added content to the about and news page.

--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -88,7 +88,7 @@ Once the block is activated, users can choose when they want it to be disabled.<
   </section>
 
   <footer>
-    &copy; <span class = "outspan"><span class ="inspan">STUDYspace</span></span> inc. 2022 - All rights reserved
+    &copy; 2022 <span class = "outspan"><span class ="inspan">STUDYspace</span></span> inc. - All rights reserved
   </footer>
 
 </body>
