Added HTML to the download and faq pages. Also fixed span tags.

--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -9,7 +9,7 @@
 <body>
   <head>
     <nav>
-      <h2><span class = "outspan"><span class ="inspan">STUDYspace</span></span></h2>
+      <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -80,7 +80,7 @@
     </section>
 
   <footer>
-    &copy; 2022 <span class = "outspan"><span class ="inspan">STUDYspace</span></span> inc. - All rights reserved
+    &copy; 2022 <span class = "outspan"><span class ="inspan">STUDY</span>space</span> inc. - All rights reserved
   </footer>
 </body>
 </html>
