--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -10,7 +10,7 @@
 <body>
   <head>
     <nav>
-      <h2><span class = "outspan"><span class ="inspan">STUDYspace</span></span></h2>
+      <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -22,11 +22,11 @@
   </head>
 
   <section class = "landing">
-    <h2>Welcome to <span class = "outspan"><span class ="inspan">STUDYspace</span></span>!</h2>
+    <h2>Welcome to <span class = "outspan"><span class ="inspan">STUDY</span>space</span>!</h2>
   </section>
 
   <section class = "textblock">
-    <h3>What is <span class = "outspan"><span class ="inspan">STUDYspace</span></span>?</h3>
+    <h3>What is <span class = "outspan"><span class ="inspan">STUDY</span>space</span>?</h3>
     <p>STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling
       to stay on track and tackle procrastination. Whether you decide to use our app or Google Chrome Extension,
       STUDYspace will allow you to study distraction-free by getting you to select the websites of your choice that
@@ -88,7 +88,7 @@ Once the block is activated, users can choose when they want it to be disabled.<
   </section>
 
   <footer>
-    &copy; 2022 <span class = "outspan"><span class ="inspan">STUDYspace</span></span> inc. - All rights reserved
+    &copy; 2022 <span class = "outspan"><span class ="inspan">STUDY</span>space</span> inc. - All rights reserved
   </footer>
 
 </body>
