--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -7,7 +7,7 @@
   <title>About Us</title>
 </head>
 <body>
-  <head>
+  <header>
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
@@ -18,7 +18,7 @@
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
-  </head>
+  </header>
     <h2><span class = "outspan"><span class ="inspan">About</span></span> Us</h2>
 
     <section class = "textblock">
@@ -29,32 +29,32 @@
       <h3><span class ="inspan">Find</span> us here!</h3>
       <div class = "boxes">
         <div class = "box">
-          <h4><span class = "outspan"><span class ="inspan">Email</span>:</h4>
+          <h4><span class = "outspan"><span class ="inspan">Email</span></span>:</h4>
           <p>STUDY@gmail.com</p>
         </div>
 
         <div class = "box">
-          <h4><span class = "outspan"><span class ="inspan">Phone</span>:</h4>
+          <h4><span class = "outspan"><span class ="inspan">Phone</span></span>:</h4>
           <p>+64 12 3456 7890</p>
         </div>
 
         <div class = "box">
-          <h4><span class = "outspan"><span class ="inspan">Instagram</span>:</h4>
+          <h4><span class = "outspan"><span class ="inspan">Instagram </span></span>:</h4>
           <p>@STUDYgroup</p>
         </div>
 
         <div class = "box">
-          <h4><span class = "outspan"><span class ="inspan">Facebook</span>:</h4>
+          <h4><span class = "outspan"><span class ="inspan">Facebook</span></span>:</h4>
           <p>STUDYspace</p>
         </div>
 
         <div class = "box">
-          <h4><span class = "outspan"><span class ="inspan">Twitter</span>:</h4>
+          <h4><span class = "outspan"><span class ="inspan">Twitter</span></span>:</h4>
           <p>@STUDYbuddy</p>
         </div>
 
         <div class = "box">
-          <h4><span class = "outspan"><span class ="inspan">Youtube</span>:</h4>
+          <h4><span class = "outspan"><span class ="inspan">Youtube</span></span>:</h4>
           <p>STUDYspace Official</p>
         </div>
       </div>
@@ -66,13 +66,13 @@
 
       <div class = "boxes">
         <div class = "box">
-            <h4><span class = "outspan"><span class ="inspan">DITCS</span></h4>
+            <h4><span class = "outspan"><span class ="inspan">DITCS</span></span></h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quo quia dolorem repudiandae ducimus atque tempora saepe, asperiores porro sunt?</p>
             <a href="" class = "btn">Learn More!</a>
         </div>
 
       <div class = "box">
-        <h4><span class = "outspan"><span class ="inspan">Gradiator</span></h4>
+        <h4><span class = "outspan"><span class ="inspan">Gradiator</span></span></h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis voluptates sint eaque incidunt necessitatibus, ratione perferendis ullam corrupti facere atque.</p>
         <a href="" class = "btn">Learn More!</a>
       </div>
