--- a/STUDYspace website/download.html
+++ b/STUDYspace website/download.html
@@ -7,7 +7,7 @@
   <title>Download</title>
 </head>
 <body>
-  <head>
+  <header>
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDYspace</span></span></h2>
       <ul>
@@ -18,7 +18,7 @@
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
-  </head>
+  </header>
 
 
   <h2>Downloading <span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
