--- a/STUDYspace website/faq.html
+++ b/STUDYspace website/faq.html
@@ -7,7 +7,7 @@
   <title>FAQ</title>
 </head>
 <body>
-  <head>
+  <header>
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
@@ -18,7 +18,7 @@
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
-  </head>
+  </header>
   <h2><span class = "outspan"><span class ="inspan">FAQ</span></span></h2>
   <p>Welcome to our <span class = "inspan">Frequently Asked Questions</span> page! Here you can find the who, what,
     when, how and why regarding <span class = "outspan"><span class = "inspan">STUDY</span>space</span>. If you are unable to find the answers you area
