--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -8,7 +8,7 @@
   <title>Home - STUDYspace</title>
 </head>
 <body>
-  <head>
+  <header>
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
@@ -19,7 +19,7 @@
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
-  </head>
+  </header>
 
   <section class = "landing">
     <h2>Welcome to <span class = "outspan"><span class ="inspan">STUDY</span>space</span>!</h2>
