--- a/STUDYspace website/news.html
+++ b/STUDYspace website/news.html
@@ -7,7 +7,7 @@
   <title>News</title>
 </head>
 <body>
-  <head>
+  <header>
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
@@ -18,7 +18,7 @@
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
-  </head>
+  </header>
 
   <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span> Newsboard</h2>
   <p>Welcome to the <span class = "outspan"><span class = "inspan">STUDY</span>space</span> newsboard! Here you can read up on all the latest information
