Added 'back to top' link, icons.

--- a/STUDYspace website/faq.html
+++ b/STUDYspace website/faq.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>FAQ</title>
 </head>
 <body>
@@ -11,11 +13,11 @@
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="download.html">Download</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+        <li><i class="fa-solid fa-circle-info"></i><a href="about.html">About</a></li>
+        <li><i class="fa-solid fa-newspaper"></i><a href="news.html">News</a></li>
+        <li><i class="fa-solid fa-download"></i><a href="download.html">Download</a></li>
+        <li><i class="fa-solid fa-circle-question"></i><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
   </header>
@@ -27,26 +29,32 @@
   <section class = "Q&A">
     <div class = "question">
       <h4>What is <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Why should I use <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>How does <span class = "outspan"><span class = "inspan">STUDY</span>space</span> differ from other productivity browser extensions or apps?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Can I download <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Is <span class = "outspan"><span class = "inspan">STUDY</span>space</span> free?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Who is <span class = "outspan"><span class = "inspan">STUDY</span>space</span> aimed at?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
@@ -55,14 +63,17 @@
 
     <div class = "question">
       <h4>What if a website I want blocked on <span class = "outspan"><span class = "inspan">STUDY</span>space</span> is not an option?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Can I make mode or website suggestions for <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>How do I set up a <span class = "outspan"><span class = "inspan">STUDY</span>space</span> account?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
@@ -71,14 +82,17 @@
 
     <div class = "question">
       <h4>Why do I need to save my <span class = "outspan"><span class = "inspan">STUDY</span>space</span> verification code?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>What is the difference between the <span class = "outspan"><span class = "inspan">STUDY</span>space</span> app and the browser extension?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Will <span class = "outspan"><span class = "inspan">STUDY</span>space</span> be available on Mobile?</h4>
+      <i class="fa-solid fa-angle-down"></i>
     </div>
   </section>
 
