--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>About Us</title>
 </head>
 <body>
@@ -11,11 +13,11 @@
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="download.html">Download</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+        <li><i class="fa-solid fa-circle-info"></i><a href="about.html">About</a></li>
+        <li><i class="fa-solid fa-newspaper"></i><a href="news.html">News</a></li>
+        <li><i class="fa-solid fa-download"></i><a href="download.html">Download</a></li>
+        <li><i class="fa-solid fa-circle-question"></i><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
   </header>
@@ -29,31 +31,37 @@
       <h3><span class ="inspan">Find</span> us here!</h3>
       <div class = "boxes">
         <div class = "box">
+          <i class="fa-solid fa-envelope"></i>
           <h4><span class = "outspan"><span class ="inspan">Email</span></span>:</h4>
           <p>STUDY@gmail.com</p>
         </div>
 
         <div class = "box">
+          <i class="fa-solid fa-phone"></i>
           <h4><span class = "outspan"><span class ="inspan">Phone</span></span>:</h4>
           <p>+64 12 3456 7890</p>
         </div>
 
         <div class = "box">
+          <i class="fa-brands fa-instagram"></i>
           <h4><span class = "outspan"><span class ="inspan">Instagram </span></span>:</h4>
           <p>@STUDYgroup</p>
         </div>
 
         <div class = "box">
+          <i class="fa-brands fa-facebook"></i>
           <h4><span class = "outspan"><span class ="inspan">Facebook</span></span>:</h4>
           <p>STUDYspace</p>
         </div>
 
         <div class = "box">
+          <i class="fa-brands fa-twitter"></i>
           <h4><span class = "outspan"><span class ="inspan">Twitter</span></span>:</h4>
           <p>@STUDYbuddy</p>
         </div>
 
         <div class = "box">
+          <i class="fa-brands fa-youtube"></i>
           <h4><span class = "outspan"><span class ="inspan">Youtube</span></span>:</h4>
           <p>STUDYspace Official</p>
         </div>
@@ -67,12 +75,14 @@
       <div class = "boxes">
         <div class = "box">
             <h4><span class = "outspan"><span class ="inspan">DITCS</span></span></h4>
+            <i class="fa-solid fa-laptop-code"></i>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quo quia dolorem repudiandae ducimus atque tempora saepe, asperiores porro sunt?</p>
             <a href="" class = "btn">Learn More!</a>
         </div>
 
       <div class = "box">
         <h4><span class = "outspan"><span class ="inspan">Gradiator</span></span></h4>
+        <i class="fa-solid fa-graduation-cap"></i>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis voluptates sint eaque incidunt necessitatibus, ratione perferendis ullam corrupti facere atque.</p>
         <a href="" class = "btn">Learn More!</a>
       </div>
