--- a/STUDYspace website/download.html
+++ b/STUDYspace website/download.html
@@ -4,22 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>Download</title>
 </head>
 <body>
   <header>
     <nav>
-      <h2><span class = "outspan"><span class ="inspan">STUDYspace</span></span></h2>
+      <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="download.html">Download</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+        <li><i class="fa-solid fa-circle-info"></i><a href="about.html">About</a></li>
+        <li><i class="fa-solid fa-newspaper"></i><a href="news.html">News</a></li>
+        <li><i class="fa-solid fa-download"></i><a href="download.html">Download</a></li>
+        <li><i class="fa-solid fa-circle-question"></i><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
   </header>
-
 
   <h2>Downloading <span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
 
