--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>Home - STUDYspace</title>
 </head>
 <body>
@@ -12,16 +13,16 @@
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="download.html">Download</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+        <li><i class="fa-solid fa-circle-info"></i><a href="about.html">About</a></li>
+        <li><i class="fa-solid fa-newspaper"></i><a href="news.html">News</a></li>
+        <li><i class="fa-solid fa-download"></i><a href="download.html">Download</a></li>
+        <li><i class="fa-solid fa-circle-question"></i><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class = "landing">
+  <section class = "landing" id = "top">
     <h2>Welcome to <span class = "outspan"><span class ="inspan">STUDY</span>space</span>!</h2>
   </section>
 
@@ -50,7 +51,15 @@ Once the block is activated, users can choose when they want it to be disabled.<
 
   <section class = "textblock">
     <div class = "time">
+      <div class = "arrow">
+        <i class="fa-solid fa-angle-up"></i>
+        <i class="fa-solid fa-angle-up"></i>
+      </div>
       <h1>10:00</h1>
+      <div class = "arrow">
+        <i class="fa-solid fa-angle-down"></i>
+        <i class="fa-solid fa-angle-down"></i>
+      </div>
       <button class = "btn">Start</button>
       <button class = "btn">Pause</button>
       <h4>This timer will start once the previous timer has finished!</h4>
@@ -71,7 +80,17 @@ Once the block is activated, users can choose when they want it to be disabled.<
 
   <section class = "textblock">
     <div class = "time">
+      <div class = "arrow">
+        <i class="fa-solid fa-angle-up"></i>
+        <i class="fa-solid fa-angle-up"></i>
+        <i class="fa-solid fa-angle-up"></i>
+      </div>
       <h1>00:00:00</h1>
+      <div class = "arrow">
+        <i class="fa-solid fa-angle-down"></i>
+        <i class="fa-solid fa-angle-down"></i>
+        <i class="fa-solid fa-angle-down"></i>
+      </div>
       <button class = "btn">Start</button>
       <button class = "btn">Pause</button>
     </div>
@@ -86,6 +105,8 @@ Once the block is activated, users can choose when they want it to be disabled.<
     <input type="text" placeholder = "Your Email Address...">
     <button class = "btn">Sign up!</button>
   </section>
+
+  <a href="#top"><i class="fa-solid fa-angle-up"></i> Back to top</a>
 
   <footer>
     &copy; 2022 <span class = "outspan"><span class ="inspan">STUDY</span>space</span> inc. - All rights reserved
