--- a/STUDYspace website/news.html
+++ b/STUDYspace website/news.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>News</title>
 </head>
 <body>
@@ -11,15 +13,14 @@
     <nav>
       <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="download.html">Download</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+        <li><i class="fa-solid fa-circle-info"></i><a href="about.html">About</a></li>
+        <li><i class="fa-solid fa-newspaper"></i><a href="news.html">News</a></li>
+        <li><i class="fa-solid fa-download"></i><a href="download.html">Download</a></li>
+        <li><i class="fa-solid fa-circle-question"></i><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
   </header>
-
   <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span> Newsboard</h2>
   <p>Welcome to the <span class = "outspan"><span class = "inspan">STUDY</span>space</span> newsboard! Here you can read up on all the latest information
   regarding the development of STUDYspace's Browser Extension & App.</p>
