--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
-  <title>About Us</title>
+  <title>Home - STUDYspace</title>
 </head>
 <body>
   <header>
     <nav>
-      <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
+      <a href="index.html"><span class = "inspan"><h2>STUDY</h2></span><h2>space</h2></a>
       <ul>
-        <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
-        <li><i class="fa-solid fa-circle-info"></i><a href="about.html">About</a></li>
-        <li><i class="fa-solid fa-newspaper"></i><a href="news.html">News</a></li>
-        <li><i class="fa-solid fa-download"></i><a href="download.html">Download</a></li>
-        <li><i class="fa-solid fa-circle-question"></i><a href="faq.html">FAQ</a></li>
+        <li><a href="about.html"><i class="fas fa-solid fa-circle-info"></i>About</a></li>
+        <li><a href="news.html"><i class="fas fa-solid fa-newspaper"></i>News</a></li>
+        <li><a href="download.html"><i class="fas fa-solid fa-download"></i>Download</a></li>
+        <li><a href="faq.html"><i class="fas fa-solid fa-circle-question"></i>FAQ</a></li>
       </ul>
     </nav>
   </header>
