Created an introduction section and added a temporary background image.

--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <section class = "landing" id = "top">
-    <h2>Welcome to <span class = "outspan"><span class ="inspan">STUDY</span>space</span>!</h2>
+    <h2>Welcome to STUDYspace!</h2>
   </section>
 
   <section class = "textblock">
