Styled textblock classes & styled checkbox input and label.

--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -29,8 +29,8 @@
   </section>
 
   <section class = "textblock">
-    <h3>What is <span class = "outspan"><span class ="inspan">STUDY</span>space</span>?</h3>
-    <p>STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling
+    <h3>What is STUDYspace?</h3>
+    <p><span class = "outspan"><span class = "inspan">STUDY</span>space</span> is a procrastination-prevention/productivity program which attempts to help students struggling
       to stay on track and tackle procrastination. Whether you decide to use our app or Google Chrome Extension,
       STUDYspace will allow you to study distraction-free by getting you to select the websites of your choice that
     pose the biggest threat to your productivity, which we will then block until you choose to disable it or until
@@ -40,9 +40,10 @@ for STUDYspace once it is released!</p>
 
   <section class = "textblock">
     <div class = "webcheck">
-      <label><input type="checkbox">Youtube</label>
+      <input type="checkbox" id = "check">
+      <label for = "check">Youtube</label>
     </div>
-    <h4><span class ="inspan">Manual</span> mode</h4>
+    <h4><span class = "outspan"><span class ="inspan">Manual</span></span> mode</h4>
     <p>The main purpose of using STUDYspace is to allow students to identify their
     biggest distractions in the digital world and take action to prevent these distractions
   from affecting their studies. Manual mode allows users to manually control how long they
@@ -67,7 +68,7 @@ Once the block is activated, users can choose when they want it to be disabled.<
       <h4>This timer will start once the previous timer has finished!</h4>
       <h2>02:00</h2>
     </div>
-    <h4><span class ="inspan">Pomodoro</span> mode</h4>
+    <h4><span class = "outspan"><span class ="inspan">Pomodoro</span></span> mode</h4>
     <p>The Pomodoro technique is a popular time management tool which is
       frequently used by people who struggle with distractions or procrastinates
       easily. Originally, Pomodoro mode was going to be loosely based off its namesake
@@ -96,7 +97,7 @@ Once the block is activated, users can choose when they want it to be disabled.<
       <button class = "btn">Start</button>
       <button class = "btn">Pause</button>
     </div>
-    <h4><span class ="inspan">Exam</span> mode</h4>
+    <h4><span class = "outspan"><span class ="inspan">Exam</span></span> mode</h4>
     <p>Exam mode is our newest STUDYspace mode concept. Similar to Pomodoro mode, Exam mode will require the user to choose a time of their choice. However,
       Exam mode will simulate real exam time constraints, meaning the user will only be able to choose a time between 45 minutes and 3 hours.
       Once a time is selected, STUDYspace will block all websites except for Google and it's applications to allow for zero distractions
@@ -108,7 +109,7 @@ Once the block is activated, users can choose when they want it to be disabled.<
     <button class = "btn">Sign up!</button>
   </section>
 
-  <a href="#top"><i class="fa-solid fa-angle-up"></i> Back to top</a>
+  <a href="#top" class = "btn" id = "to-top"><i class="fa-solid fa-angle-up"></i> Back to top</a>
 
   <footer>
     &copy; 2022 <span class ="inspan">STUDY</span>space inc. - All rights reserved
