Completed the home page + fixed bug that occured in the footer tag.

--- a/STUDYspace website/faq.html
+++ b/STUDYspace website/faq.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>Home - STUDYspace</title>
 </head>
@@ -97,7 +98,7 @@
   </section>
 
   <footer>
-    &copy; 2022 <span class = "outspan"><span class ="inspan">STUDY</span>space</span> inc. - All rights reserved
+    &copy; 2022 <span class ="inspan">STUDY</span>space inc. - All rights reserved
   </footer>
 
 </body>
