Changed footer layout + Changed font.

--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>Home - STUDYspace</title>
@@ -29,70 +29,61 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque ex rem nihil earum veritatis atque saepe ab, voluptatem delectus. Maxime, ipsum! Architecto, officiis ducimus omnis quibusdam nulla corporis eligendi, sint rerum neque alias, veniam velit, non amet facilis optio dolorem aliquid fuga. Magni temporibus labore suscipit sequi dignissimos incidunt, neque cumque. Fugiat distinctio earum, hic libero voluptatem magnam voluptates quae enim dolores alias illum soluta, voluptate rerum omnis. Totam voluptate vero quibusdam et dolorem officiis laboriosam officia quod rerum quaerat ratione natus dicta expedita quasi quas ullam, corporis temporibus eveniet illum beatae dolor, numquam laudantium quam minima! Expedita, quasi!</p>
     </section>
 
-    <section class = "contact">
-      <h3><span class ="inspan">Find</span> us here!</h3>
-      <div class = "boxes">
-        <div class = "box">
-          <i class="fa-solid fa-envelope"></i>
-          <h4><span class = "outspan"><span class ="inspan">Email</span></span>:</h4>
-          <p>STUDY@gmail.com</p>
-        </div>
-
-        <div class = "box">
-          <i class="fa-solid fa-phone"></i>
-          <h4><span class = "outspan"><span class ="inspan">Phone</span></span>:</h4>
-          <p>+64 12 3456 7890</p>
-        </div>
-
-        <div class = "box">
-          <i class="fa-brands fa-instagram"></i>
-          <h4><span class = "outspan"><span class ="inspan">Instagram </span></span>:</h4>
-          <p>@STUDYgroup</p>
-        </div>
-
-        <div class = "box">
-          <i class="fa-brands fa-facebook"></i>
-          <h4><span class = "outspan"><span class ="inspan">Facebook</span></span>:</h4>
-          <p>STUDYspace</p>
-        </div>
-
-        <div class = "box">
-          <i class="fa-brands fa-twitter"></i>
-          <h4><span class = "outspan"><span class ="inspan">Twitter</span></span>:</h4>
-          <p>@STUDYbuddy</p>
-        </div>
-
-        <div class = "box">
-          <i class="fa-brands fa-youtube"></i>
-          <h4><span class = "outspan"><span class ="inspan">Youtube</span></span>:</h4>
-          <p>STUDYspace Official</p>
-        </div>
-      </div>
-    </section>
-
-
-    <section class = "other">
-      <h3><span class ="inspan">Other</span> projects</h3>
-
-      <div class = "boxes">
-        <div class = "box">
-            <h4><span class = "outspan"><span class ="inspan">DITCS</span></span></h4>
-            <i class="fa-solid fa-laptop-code"></i>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quo quia dolorem repudiandae ducimus atque tempora saepe, asperiores porro sunt?</p>
-            <a href="" class = "btn">Learn More!</a>
-        </div>
-
-      <div class = "box">
-        <h4><span class = "outspan"><span class ="inspan">Gradiator</span></span></h4>
-        <i class="fa-solid fa-graduation-cap"></i>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis voluptates sint eaque incidunt necessitatibus, ratione perferendis ullam corrupti facere atque.</p>
-        <a href="" class = "btn">Learn More!</a>
-      </div>
-      </div>
-    </section>
-
     <footer>
-      &copy; 2022 <span class ="inspan">STUDY</span>space inc. - All rights reserved
+      <div class = "main-content">
+        <div class = "left box">
+          <h3>About us</h3>
+          <div class = "content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+            <div class = "social">
+              <a href=""><span class="fab fa-brands fa-facebook"></span></a>
+              <a href=""><span class="fab fa-brands fa-twitter"></span></a>
+              <a href=""><span class="fab fa-brands fa-instagram"></span></a>
+              <a href=""><span class="fab fa-brands fa-youtube"></span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class = "center box">
+          <h3>Address</h3>
+          <div class = "content">
+            <div class = "place">
+              <span class="fan fa-solid fa-location-dot"></span>
+              <span class = "text">Queenstown, New Zealand</span>
+            </div>
+
+            <div class = "phone">
+              <span class="fan fa-solid fa-phone"></span>
+              <span class = "text">+64 20 419 50151</span>
+            </div>
+
+            <div class = "email">
+              <span class="fan fa-solid fa-envelope"></span>
+              <span class = "text">18lbeale@wakatipu.school.nz</span>
+            </div>
+          </div>
+        </div>
+
+        <div class = "right box">
+          <h3>Sign up now</h3>
+          <div class = "content">
+            <form action="#">
+              <div class = "email">
+                <div class = "text">To receive updates on <span class = "inspan">STUDY</span>space's development.</div>
+                <input type="email" required placeholder="Your Email Address...">
+              </div>
+              <div class = "sign">
+                <button>Sign up!</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class = "bottom">
+        <center>
+          <span class = "credit"><span class ="inspan">STUDY</span>space inc. | &copy; 2022 All rights reserved</span>
+        </center>
+      </div>
     </footer>
 </body>
 </html>
