--- a/STUDYspace website/download.html
+++ b/STUDYspace website/download.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>Home - STUDYspace</title>
@@ -97,7 +97,60 @@
   </section>
 
   <footer>
-    &copy; 2022 <span class ="inspan">STUDY</span>space inc. - All rights reserved
+    <div class = "main-content">
+      <div class = "left box">
+        <h3>About us</h3>
+        <div class = "content">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+          <div class = "social">
+            <a href=""><span class="fab fa-brands fa-facebook"></span></a>
+            <a href=""><span class="fab fa-brands fa-twitter"></span></a>
+            <a href=""><span class="fab fa-brands fa-instagram"></span></a>
+            <a href=""><span class="fab fa-brands fa-youtube"></span></a>
+          </div>
+        </div>
+      </div>
+
+      <div class = "center box">
+        <h3>Address</h3>
+        <div class = "content">
+          <div class = "place">
+            <span class="fan fa-solid fa-location-dot"></span>
+            <span class = "text">Queenstown, New Zealand</span>
+          </div>
+
+          <div class = "phone">
+            <span class="fan fa-solid fa-phone"></span>
+            <span class = "text">+64 20 419 50151</span>
+          </div>
+
+          <div class = "email">
+            <span class="fan fa-solid fa-envelope"></span>
+            <span class = "text">18lbeale@wakatipu.school.nz</span>
+          </div>
+        </div>
+      </div>
+
+      <div class = "right box">
+        <h3>Sign up now</h3>
+        <div class = "content">
+          <form action="#">
+            <div class = "email">
+              <div class = "text">To receive updates on <span class = "inspan">STUDY</span>space's development.</div>
+              <input type="email" required placeholder="Your Email Address...">
+            </div>
+            <div class = "sign">
+              <button>Sign up!</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class = "bottom">
+      <center>
+        <span class = "credit"><span class ="inspan">STUDY</span>space inc. | &copy; 2022 All rights reserved</span>
+      </center>
+    </div>
   </footer>
 
 </body>
